Ejemplos de layouts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MyCourseCompose</string>
+    <string name="title_activity_jetpack_components_catalog_theme">JetpackComponentsCatalogTheme
+    </string>
 </resources>
