--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MyCourseCompose</string>
     <string name="title_activity_jetpack_components_catalog_theme">JetpackComponentsCatalogTheme
     </string>
+    <string name="title_activity_jetpack_compose_instagram">JetpackComposeInstagram</string>
 </resources>
